force-app/main/default/objects/Threshold_Receipt__c/Threshold_Receipt__c.object-meta.xml
<CustomObject>
    <label>Threshold Receipt</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Threshold Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threshold Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>