force-app/main/default/objects/Threshold_Receipt__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <label>Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Receipt_Type</valueSetName>
    </valueSet>
</CustomField>